--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
 	},
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"files": [
-		"dist",
-		"README.md",
-		"LICENSE"
-	],
+	"files": ["dist", "README.md", "LICENSE"],
 	"scripts": {
 		"build": "tsc -p .",
 		"ts:init": "tsc --init",
@@ -20,14 +16,7 @@
 		"lint": "biome lint --write .",
 		"test": "jest"
 	},
-	"keywords": [
-		"http",
-		"client",
-		"typescript",
-		"library",
-		"request",
-		"fetch"
-	],
+	"keywords": ["http", "client", "typescript", "library", "request", "fetch"],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
