--- a/package.json
+++ b/package.json
@@ -1,31 +1,42 @@
 {
-	"name": "@thatguyjamal/type-fetch",
-	"version": "0.1.5",
-	"description": "A lightweight, flexible HTTP client library for making API requests in JavaScript/TypeScript.",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/thatguyjamal/type-fetch.git"
-	},
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"files": ["dist", "README.md", "LICENSE"],
-	"scripts": {
-		"build": "tsc -p .",
-		"ts:init": "tsc --init",
-		"format": "biome format --write .",
-		"lint": "biome lint --write .",
-		"test": "jest"
-	},
-	"keywords": ["http", "client", "typescript", "library", "request", "fetch"],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@biomejs/biome": "^1.8.3",
-		"@types/jest": "^29.5.12",
-		"@types/node": "^22.3.0",
-		"jest": "^29.7.0",
-		"ts-jest": "^29.2.4",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.5.4"
-	}
+  "name": "@thatguyjamal/type-fetch",
+  "version": "0.1.5",
+  "description": "A lightweight, zero-dependency HTTP client library for making API requests in JavaScript/TypeScript.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thatguyjamal/type-fetch.git"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "tsc -p .",
+    "ts:init": "tsc --init",
+    "format": "biome format --write .",
+    "lint": "biome lint --write .",
+    "test": "jest"
+  },
+  "keywords": [
+    "http",
+    "client",
+    "typescript",
+    "library",
+    "request",
+    "fetch"
+  ],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.3.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
+  }
 }
