--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
     "@types/jest": "^29.5.12",
-    "@types/node": "^22.3.0",
+    "@types/node": "22.13.13",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.4",
+    "ts-jest": "29.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
