--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: build
 on:
   push:
     branches:
-    - '**'
+      - "**"
   pull_request:
     branches:
-    - 'main'
+      - "main"
 
 jobs:
   install:
@@ -18,7 +18,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          version: 9
+          version: 10.6.2
 
       - name: Install dependencies
         run: pnpm install
