--- a/package.json
+++ b/package.json
@@ -1,35 +1,52 @@
 {
-	"name": "@thatguyjamal/type-fetch",
-	"version": "0.2.0",
-	"description": "A lightweight, zero-dependency HTTP client library for making API requests in JavaScript/TypeScript.",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/thatguyjamal/type-fetch.git"
-	},
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"files": ["dist", "README.md", "LICENSE"],
-	"scripts": {
-		"build": "tsc -p .",
-		"ts:init": "tsc --init",
-		"format": "biome format --write .",
-		"lint": "biome lint --write .",
-		"test": "jest"
-	},
-	"keywords": ["http", "client", "typescript", "library", "request", "fetch"],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@biomejs/biome": "^1.8.3",
-		"@types/jest": "^29.5.12",
-		"@types/node": "22.13.13",
-		"jest": "^29.7.0",
-		"ts-jest": "29.3.0",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.5.4"
-	},
-	"packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b",
-	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome"]
-	}
+  "name": "@thatguyjamal/type-fetch",
+  "version": "0.2.0",
+  "description": "A lightweight, zero-dependency HTTP client library for making API requests in JavaScript/TypeScript.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thatguyjamal/type-fetch.git"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "tsc -p .",
+    "ts:init": "tsc --init",
+    "format": "biome format --write .",
+    "lint": "biome lint --write .",
+    "test": "jest"
+  },
+  "keywords": [
+    "http",
+    "client",
+    "typescript",
+    "library",
+    "request",
+    "fetch"
+  ],
+  "author": "Jamal Lyons",
+  "license": "MIT",
+  "sideEffects": false,
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
+    "@types/jest": "^29.5.12",
+    "@types/node": "22.13.13",
+    "jest": "^29.7.0",
+    "ts-jest": "29.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
+  },
+  "packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome"
+    ]
+  }
 }
