--- a/.github/workflows/lint-format.yml
+++ b/.github/workflows/lint-format.yml
@@ -15,6 +15,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: bun install
+
       - name: Setup Biome
         uses: biomejs/setup-biome@v2
 
