--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
 	},
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"files": [
-		"dist",
-		"README.md",
-		"LICENSE"
-	],
+	"files": ["dist", "README.md", "LICENSE"],
 	"scripts": {
 		"build": "tsc -p ./tsconfig.json && tsc-alias -p ./tsconfig.json",
 		"ts:init": "tsc --init",
@@ -20,14 +16,7 @@
 		"lint": "biome lint --write .",
 		"test": "jest"
 	},
-	"keywords": [
-		"http",
-		"client",
-		"typescript",
-		"library",
-		"request",
-		"fetch"
-	],
+	"keywords": ["http", "client", "typescript", "library", "request", "fetch"],
 	"author": "Jamal Lyons",
 	"license": "MIT",
 	"sideEffects": false,
@@ -35,16 +24,16 @@
 		"node": ">=14.0.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.8.3",
+		"@biomejs/biome": "1.9.4",
 		"@jest/types": "^29.6.3",
 		"@types/jest": "^29.5.12",
-		"@types/node": "22.13.13",
+		"@types/node": "22.13.14",
 		"jest": "^29.7.0",
 		"ts-jest": "29.3.0",
 		"ts-node": "^10.9.2",
-		"tsc-alias": "^1.8.8",
-		"tsconfig-paths-webpack-plugin": "^4.1.0",
-		"typescript": "^5.5.4"
+		"tsc-alias": "1.8.13",
+		"tsconfig-paths-webpack-plugin": "4.2.0",
+		"typescript": "5.8.2"
 	},
 	"packageManager": "pnpm@10.6.2+sha512.47870716bea1572b53df34ad8647b42962bc790ce2bf4562ba0f643237d7302a3d6a8ecef9e4bdfc01d23af1969aa90485d4cebb0b9638fa5ef1daef656f6c1b"
 }
